--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/ducktrshessami/book-search/issues"
   },
-  "homepage": "https://github.com/ducktrshessami/book-search#readme"
+  "homepage": "https://github.com/ducktrshessami/book-search#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.11.19"
+  }
 }
