--- a/client/package.json
+++ b/client/package.json
@@ -34,5 +34,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://localhost:3001",
+  "homepage": "https://duck-book-search.herokuapp.com/"
 }
